[package]
name = "test_task"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "gzip", "brotli", "deflate"] }
scraper = "0.18"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
rand = "0.8"
log = "0.4"
env_logger = "0.11"